faq work without animation

--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -7675,6 +7675,8 @@
                     font-size: 36px;
                     padding-top: 0;
                     text-transform: uppercase;
+
+                    cursor: default;
                 }
 
                 .answer {
