--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -4403,11 +4403,13 @@
 
     .ak-my-account__orders-mobile-list {
         display: flex;
-        flex-direction: column;
+       
+        margin-top: 10px;
 
         @include media-breakpoint-up(sm) {
             display: none;
         }
+        
 
         .order-item {
             display: flex;
@@ -4415,26 +4417,46 @@
 
             margin-bottom: 70px;
 
-
-            &:first-of-type {
-                border-top: 0;
-            }
+            border-top: 1px solid #EAEAEA;
+        
 
             .item-row {
                 display: flex;
                 justify-content: space-between;
 
+                border-bottom: 1px solid #EAEAEA;
 
                 padding: 30px var(--ak-main-spacing);
+                align-items: baseline;
 
-                @include media-breakpoint-down(sm) {
-                    padding: 30px 0;
+                &:last-child{
+                    padding-bottom: 9px;
+                }
+
+                .col1{
+                    color: #128796;
+                    font-family: 'Din Pro Bold';
+                    font-size: 20px;
+                }
+
+                .col2{
+                    color: #128796;
+                    font-size: 16px;
+                }
+
+                .action-btn{
+                    display: flex;
+                    flex-direction: column;
+                    .button {
+                        text-decoration: underline;
+                        color: #F89D3F;
+                        font-size: 16px;
+                        margin-bottom: 21px;
+                    }
                 }
             }
 
-            a.view {
-                text-decoration: underline;
-            }
+            
         }
     }
 
@@ -7217,6 +7239,13 @@
         }
     }
 
+    .my-account-page__content-section{
+        @include media-breakpoint-down(sm) {
+            padding-right: 0;
+            padding-left: 0;
+        }
+    }
+
 }
 
 .popular-product {
@@ -8269,3 +8298,4 @@
 .iconic-woothumbs-all-images-wrap .slick-vertical .slick-slide{
     cursor: pointer;
 }
+
