--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -1840,6 +1840,10 @@
             background-image: url("../img/arrow.svg");
         }
     }
+
+    .home-video{
+        width: 100%;
+    }
 }
 
 // products slider
